[package]
name = "redis-lite"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/JohnCrickett/RedisLite"
description = """
This is a very lite version of a Redis server built in Rust with Tokio.
The intent of the project is to build a real-world application as part of learning Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "redis-lite-server"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0.69"
bytes = "1.3.0"
tokio = {version = "1.24.1", features = ["full"]}
